<resources>
    //Study place list item:
    <string name="app_name">  Find my study place</string>
    <string name="title">Place Title</string>
    <string name="type">Place Type</string>
    <string name="location">Place Location</string>
    <string name="rating">0.0</string>

    //Main:
    <string name="logIn">LOG IN</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="createnewuser">Create new user</string>
    <string name="txtloggedIn"> logged in</string>
    <string name="txtloggedOut">User logged out</string>
    <string name="errorInvalidEmail">Please enter valid email-address</string>
    <string name="errorInvalidPw">Password must contain at least 8 creators</string>
    <string name="userCreated">User created</string>
    <string name="errorUserCreatation">Failed to create user</string>
    <string name="errorUserSignIn">Incorrect email and/or password</string>

    //Overview:
    <string name="logOut">Log Out</string>
    <string name="findStudyPlace">Find Study Place</string>
    <string name="single">Single</string>
    <string name="map">Map</string>
    <string name="userlocation">Your location</string>
    <string name="list">List</string>
    <string name="sortBy">Sort By</string>
    <string name="shareLocation">Share Location</string>
    <string name="txtWelcome">Welcome </string>
    <string name="txtSingleGroup">Single and group</string>
    <string name="txtGroup">Group</string>
    <string name="errorLoadingStudyPlaces">Unable to load study places...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Share location:
    <string name="ShareLocation">Share Location</string>
    <string name="Back">Back</string>
    <string name="FriendsEmail">Friends Email</string>
    <string name="Add">Add</string>
    <string name="AddFriends">Add Friends:</string>
    <string name="AddedFriends">Added friends:</string>
    <string name="AddComment">Add Comment:</string>
    <string name="Comments">Comments</string>
    <string name="txtFriendDoesNotExist">Friend Does Not Exist...</string>
    <string name="txtSharedLocation">Location shared with friends</string>
    <string name="ratbarRating">RatingBar</string>
    <string name="AddBuilding">Add Building:</string>
    <string name="Building">Building</string>
    <string name="errorNoFrieds">Please add some friends first</string>
    <string name="errorPushingNotification">Erorr while sharing location...</string>

    //Notification:
    <string name="notificationTitle">has shared their location with you!</string>
    <string name="notificationText">Building:</string>

</resources>